--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@
     justify-content: space-evenly;
     color: var(--accent-color);
     position: fixed;
+    z-index: 2;
     top: 0;
     left: 0;
     right: 0;
@@ -231,7 +232,7 @@ li.ul__functionalities{
 }
 
 .section-extra_funcionality .fa-3x {
-    color: var(--text-primary-color); /* Only in my section icons have class fa-5x */
+    color: var(--text-primary-color);
 }
 
 /* contact-section styling */
@@ -297,7 +298,7 @@ form {
 
 .aboutUs__heading{
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding-top: 1rem;
     padding-bottom: 0.5rem;
 }
@@ -309,62 +310,55 @@ form {
     border-bottom: 2px solid var(--accent-color);
 }
 
-.aboutUs__bio1, .aboutUs__bio2, .aboutUs__bio3 {
-    margin: 0.5rem 0;
+.aboutUs_img:hover .aboutUs_card, .aboutUs_card--back{
+    transform: rotateY( 180deg );
 }
-
-.aboutUs__bio div img{
-    border: 2px solid var(--dark-primary-color);
+  
+.aboutUs_card {
+    transition: transform 0.7s;
+    transform-style: preserve-3d;
+    width: 250px;
+    height: 250px;
+}
+  
+.aboutUs_card--front, .aboutUs_card--back {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
     border-radius: 50%;
-    display: block;
-    width: 100%; 
-    max-width: 280px;
-    height: auto;
-    margin: 0 auto;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.aboutUs__bio div p {
-    font-size: 1.5rem;
-    color: var(--dark-primary-color);
-    padding: 0.5rem;
-    text-align: center;
+.aboutUs_card--back {
+    display: flex;
+    align-items: center;
+    background: var(--dark-primary-color);
 }
 
-.aboutUs__caption1 {
-    grid-area: c1;
+.aboutUs_card--back a .fa-3x {
+    color: var(--light-primary-color);
 }
 
-.aboutUs__caption2 {
-    grid-area: c2;
-}
-
-.aboutUs__caption3 {
-    grid-area: c3;
+.aboutUs_card--front img{
+    border: 2px solid var(--dark-primary-color);
+    display: block;
+    width: 100%; 
+    height: auto;
+    margin: 0 auto;
+    border-radius: 50%;
 }
 
 .aboutUs__caption {
     align-self: center;
-    padding-bottom: 1.25rem;
-}
-
-.aboutUs__caption h2 {
-    font-size: 1.75rem;
-    text-align: center;
+    padding-top: 0.5rem;
+    padding-bottom: 1.75rem;
 }
 
 .aboutUs__caption p {
-    font-size: 1.25rem;
+    font-size: 1.75rem;
     text-align: center;
-}
-
-.aboutUs__caption ul {
-    display: flex;
-    list-style: none;
-}
-
-.aboutUs__caption ul li {
-    padding: 0.25rem;
 }
 
 footer {
@@ -403,40 +397,47 @@ footer {
 
     .aboutUs__bio{
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(3,1fr);
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: 1fr;
         grid-template-areas:
-            "p1 c1"
-            "c2 p2"
-            "p3 c3";
-            padding: 1.25rem;
+            "p1 p2 p3"
+            "c1 c2 c3";
     }
 
-    .aboutUs__bio1{
+    .aboutUs_card {
+        width: 190px;
+        height: 190px;
+    }
+
+    .aboutUs__img1{
         grid-area: p1;
     }
     
-    .aboutUs__bio2{
+    .aboutUs__img2{
         grid-area: p2;
     }
     
-    .aboutUs__bio3{
+    .aboutUs__img3{
         grid-area: p3;
     }
 
+    .aboutUs__caption1 {
+        grid-area: c1;
+    }
+    
+    .aboutUs__caption2 {
+        grid-area: c2;
+    }
+    
+    .aboutUs__caption3 {
+        grid-area: c3;
+    }
+
     .aboutUs__caption {
-        justify-self: end;
+        justify-self: center;
         padding: 1rem;
         margin: 0;
         
-    }
-
-    .aboutUs__caption1,.aboutUs__caption3 {
-        justify-self: start;
-    }
-
-    .aboutUs__caption2 {
-        justify-self: end;
     }
 
     .aboutUs__caption ul {
@@ -500,6 +501,13 @@ footer {
         grid-template-columns: 4rem 1fr 2rem 1fr 4rem;
     }
 
+    .aboutUs_card {
+        width: 250px;
+        height: 250px;
+    }
+
+    /*
+
     .aboutUs__bio{
         grid-template-columns: 1fr 2fr 2fr 1fr;
         grid-template-rows: repeat(3,1fr);
@@ -508,6 +516,8 @@ footer {
             ". c2 p2 ."
             ". p3 c3 .";
     }
+
+    */
 }
 
 @media screen and (min-width: 1000px){
