--- a/css/main.css
+++ b/css/main.css
@@ -451,4 +451,61 @@ footer {
 
 }
 
+/* Cookie part */
 
+#cookieAlert * {
+    margin: 0px;
+    padding: 0px;
+}
+
+#cookieAlert {
+    position: fixed;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    background-color: #323334;
+    padding: 20px;
+    box-shadow: 0px -1px 3px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+#cookieAlert h5 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+    margin-bottom: 7px;
+}
+
+#cookieAlert p {
+    font-size: 12px;
+    color: #FFFFFF;
+    line-height: 1.5em;
+    text-align: justify;
+    
+}
+
+#cookieAlert a {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    width: 22px;
+    height: 22px;
+    border-radius: 11px;
+    line-height: 22px;
+    font-size: 12px;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    background-color: #ff6000;
+    }
+
+#cookieAlert a:hover {
+    background-color: #ff7925;
+}
+
+.hidden{
+    display: none;
+}
