add pointer cursor on submit button, fix script.js

--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,8 @@ form {
 
 .contact__button:hover {
     background: var(--dark-primary-color);
-    color: var(--text-primary-color); 
+    color: var(--text-primary-color);
+    cursor: pointer;
 }
 
 .aboutUs {
