--- a/css/main.css
+++ b/css/main.css
@@ -235,8 +235,6 @@ li.ul__functionalities{
     color: var(--text-primary-color);
 }
 
-/* contact-section styling */
-
 .contact {
     display: flex;
     flex-flow: column;
@@ -244,16 +242,21 @@ li.ul__functionalities{
     text-align: center;
     background: var(--default-primary-color);
     color: var(--text-primary-color);
-    padding: 8rem 1.5rem;
+    padding: 6rem 1.5rem 7rem 1.5rem;
     border-top: 2px solid var(--accent-color);
 }
 
-.contact h2 {
-    font-size: 1.25rem;
+.contact--emphasis {
+    color: var(--accent-color);
+}
+
+.contact__heading {
+    padding-bottom: 4rem;
+    font-size: 1.5rem;
 }
 
 .contact p, .contact__email, .contact__button {
-    font-size: 1rem;
+    font-size: 1.25rem;
 }
 
 .contact__container {
@@ -276,13 +279,14 @@ form {
 .contact__email {
     background: var(--light-primary-color);
     color: var(--text-dark-primary-color);
-    margin-bottom: 0.5rem; 
+    margin-bottom: 0.75rem; 
 }
 
 .contact__button {
     background: var(--accent-color); 
     color: var(--text-dark-primary-color);  
     width: 100%;
+    margin-bottom: 3rem; 
 }
 
 .contact__button:hover {
@@ -299,9 +303,9 @@ form {
 
 .aboutUs__heading{
     text-align: center;
-    font-size: 2rem;
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
+    font-size: 1.5rem;
+    padding-top: 6rem;
+    padding-bottom: 4rem;
 }
 
 .aboutUs__bio{
@@ -309,6 +313,15 @@ form {
     flex-direction: column;
     background: var(--light-primary-color);
     border-bottom: 2px solid var(--accent-color);
+    padding-bottom: 10.75rem;
+}
+.aboutUs__img1, .aboutUs__img2 {
+    padding-top: 0.5rem;
+    padding-bottom: 3.5rem;
+}
+
+.aboutUs__img3 {
+    padding-top: 0.5rem;
 }
 
 .aboutUs__img:hover .aboutUs__card, .aboutUs__card--back{
@@ -364,12 +377,10 @@ form {
 
 .aboutUs__caption {
     align-self: center;
-    padding-top: 0.5rem;
-    padding-bottom: 1.75rem;
 }
 
-.aboutUs__caption p {
-    font-size: 1.75rem;
+.aboutUs p {
+    font-size: 1.25rem;
     text-align: center;
 }
 
@@ -412,8 +423,8 @@ footer {
         grid-template-columns: repeat(3,1fr);
         grid-template-rows: 1fr;
         grid-template-areas:
-            "p1 p2 p3"
-            "c1 c2 c3";
+            "c1 c2 c3"
+            "p1 p2 p3";
     }
 
     .aboutUs__card {
@@ -421,6 +432,10 @@ footer {
         height: 190px;
     }
 
+    .aboutUs__img1, .aboutUs__img2 {
+        padding-bottom: 0rem;
+    }
+    
     .aboutUs__img1{
         grid-area: p1;
     }
@@ -447,7 +462,6 @@ footer {
 
     .aboutUs__caption {
         justify-self: center;
-        padding: 1rem;
         margin: 0;
         
     }
@@ -518,18 +532,6 @@ footer {
         height: 250px;
     }
 
-    /*
-
-    .aboutUs__bio{
-        grid-template-columns: 1fr 2fr 2fr 1fr;
-        grid-template-rows: repeat(3,1fr);
-        grid-template-areas:
-            ". p1 c1 ."
-            ". c2 p2 ."
-            ". p3 c3 .";
-    }
-
-    */
 }
 
 @media screen and (min-width: 1000px){
