--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@
     padding: 0;
     font-family: sans-serif;  
     scroll-behavior: smooth;
+    max-width: 1200px;
 }
 
 /* navbar */
@@ -97,7 +98,11 @@ a.nav:hover {
     background: var(--text-dark-primary-color);
 }
 
+
 /* hero section */
+#rightArrow, #leftArrow{
+cursor: pointer;
+}
 .hero{
     display: flex;
     min-height: 540px;
@@ -132,11 +137,11 @@ transition: background-image 1s ease-in-out;
     text-align: center;
     /* width: 50%; */
     /* height: 25%; */
-     margin-left: 4rem;  
-    padding: 2rem;
+     
+    padding: 2em;
     text-align: center;
     justify-content: center;
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
     }
 .hero__header > h3{
 text-transform: uppercase;
@@ -423,8 +428,7 @@ footer {
 
     .hero__header{
         font-size: medium;
-        border-radius: 2rem;
-        margin-left: 7rem;
+        border-radius: 2em;
         width: 80%;
         align-self: center;
         justify-content: center;
