--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
 }
 * {
     box-sizing: border-box;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-family: "Raleway", sans-serif;  
     scroll-behavior: smooth;
