--- a/css/game.css
+++ b/css/game.css
@@ -1,7 +1,49 @@
 #gameScreen {
     border: 1px solid black;
 }
-
-img {
+body{
+    background:#607D8B;
+       
+    /* background-repeat: no-repeat; */
+}
+img{
+    width: 30px;
+}
+#imgTree #imgGround{
     display: none;
+}
+* {
+    box-sizing: border-box;
+    margin: 0 auto;
+    font-family: "Raleway", sans-serif;  
+    scroll-behavior: smooth;
+    max-width: 1200px;
+}
+#start{
+    justify-self: center;
+    padding: .3em;
+    background: white;
+    color: #607D8B;
+    font-weight: bolder;
+}
+header{
+
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-justify: center;
+    padding: 1em;
+    margin: .3em;
+}
+.head{
+    padding: .3em;;
+}
+#gameScreen{
+width: 800px;
+height: 800px;
+border: solid #455A64 1em;
+display: flex;
+justify-content: center;
+align-content: center;
+text-align: center;
 }
