--- a/css/game.css
+++ b/css/game.css
@@ -25,7 +25,7 @@ img {
   height: 100%; 
   overflow: auto; 
   background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  background-color: rgb(57, 70, 57); 
   text-align: center;
 }
 
