--- a/css/game.css
+++ b/css/game.css
@@ -27,6 +27,7 @@ img {
   background-color: rgb(0,0,0); 
   background-color: rgb(57, 70, 57); 
   text-align: center;
+  font-family: "Raleway", sans-serif;
 }
 
 
