--- a/css/game.css
+++ b/css/game.css
@@ -13,3 +13,15 @@
 img {
     display: none;
 }
+
+.endGame {
+    height: 400px;
+    width: 400px;
+    position: absolute;
+    left: 50%;
+    margin-left: -200px;
+    top: 50%;
+    margin-top: -200px;
+    background: white;
+    text-align: center;
+  }
