--- a/css/main.css
+++ b/css/main.css
@@ -735,3 +735,82 @@ footer {
         margin: auto, 15em;
     }
 }
+
+.cancelbtn, .acceptbtn {
+    float: left;
+    width: 50%;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;  
+    opacity: 0.9;
+  }
+  
+  .cancelbtn {
+    background-color: #ccc;
+    color: black;
+  }
+  
+  .acceptbtn {
+    background-color: #f44336;
+  }
+  
+  .container__modal {
+    padding: 16px;
+    text-align: center;
+  }
+  
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 10; 
+    left: 0;
+    top: 0;
+    right: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: #607D8B;
+    padding-top: 50px;   
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; 
+    border: 1px solid #888;
+    width: 60%; 
+    color: #212121;
+  }
+    
+  
+ /* hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+ } */
+   
+  .close__modal {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #f1f1f1;
+  }
+  
+  .close__modal:hover,
+  .close__modal:focus {
+    color: #f44336;
+    cursor: pointer;
+  }
+  
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  @media screen and (max-width: 500px) {
+    .cancelbtn, .acceptbtn {
+       width: 100%;
+    }
+  }
