--- a/css/main.css
+++ b/css/main.css
@@ -758,20 +758,21 @@ footer {
   .container__modal {
     padding: 16px;
     text-align: center;
+    opacity: 1;
   }
   
   .modal {
     display: none; 
-    position: fixed; 
+    position: absolute; 
     z-index: 10; 
-    left: 0;
+    /* left: 0;
     top: 0;
-    right: 0;
+    right: 0; */
     width: 100%; 
     height: 100%; 
     overflow: auto; 
-    background-color: #607D8B;
-    padding-top: 50px;   
+    /* background-color: #607D8B; */
+    padding-top: 50px;     
   }
   
   .modal-content {
@@ -779,7 +780,8 @@ footer {
     margin: 5% auto 15% auto; 
     border: 1px solid #888;
     width: 60%; 
-    color: #212121;
+    color: #212121;   
+    border: 2px solid #F44336;
   }
     
   
