--- a/css/game.css
+++ b/css/game.css
@@ -15,13 +15,27 @@ img {
 }
 
 .endGame {
-    height: 400px;
-    width: 400px;
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    left: 50%;
-    margin-left: -200px;
-    top: 50%;
-    margin-top: -200px;
+    max-width: 500px;
+    max-height: 300px;
     background: white;
     text-align: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto auto;
+    
   }
+
+.endGame h2{
+    font-size: 30px;
+    margin: 0;
+}
+
+.endGame p{
+    font-size: 20px;
+    margin: 0;
+}
