--- a/css/game.css
+++ b/css/game.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "Raleway", sans-serif;
+}
+
 #gameScreen {
     border: 1px solid black;
 }
@@ -10,35 +14,77 @@
     margin-left: 2rem;
 }
 
+h2 {
+    font-size: 30px;
+}
+
+p {
+    font-size: 20px;
+}
+
 img {
     display: none;
 }
 
-.endGame {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    max-width: 500px;
-    max-height: 300px;
-    background: white;
+button {
+    background-color: #5CB85C;
+    border: none;
+    color: white;
+    padding: 20px;
     text-align: center;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto auto;
-    
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    border-radius: 12px;
+  }
+  
+  button:hover,
+  button:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: #4BA74B;
   }
 
-.endGame h2{
-    font-size: 30px;
+#endGame {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    width: 40%; 
+    height: 40%;
+    background: white;
+    text-align: center;
+    padding: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto auto;
+    border-bottom: 16px solid #5cb85c;
+  }
+
+#endGame div {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    flex-basis: auto;
+    justify-content: space-evenly;
+}
+
+#endGame button, #endGame p, #endGame h2 {
     margin: 0;
 }
 
-.endGame p{
-    font-size: 20px;
-    margin: 0;
+#endGame p {
+    padding: 0;
 }
+
+#endGame button {
+    width: 50%;
+    align-self: center;
+}
+
 .modal {
   display: none; 
   position: fixed; 
@@ -52,11 +98,10 @@ img {
   background-color: rgb(0,0,0); 
   background-color: rgb(57, 70, 57); 
   text-align: center;
-  font-family: "Raleway", sans-serif;
 }
 
 
-.modal-content {
+.modal__content {
   position: relative;
   background-color: #fefefe;
   margin: auto;
@@ -67,7 +112,8 @@ img {
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
+  border-bottom: 16px solid #5cb85c;
 }
 
 
@@ -81,37 +127,13 @@ img {
   to {top:0; opacity:1}
 }  
 
-.close {
-  background-color: #5CB85C;
-  border: none;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  border-radius: 12px;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: #4BA74B;
-}
-
-.modal-header {
+.modal__header {
   padding: 2px 16px;
   background-color: #5cb85c;
   color: white;
 }
 
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
+.modal__body {
+    padding: 2px 16px;
 }
+
