--- a/css/game.css
+++ b/css/game.css
@@ -27,12 +27,7 @@ header{
   flex-direction: column;
   text-justify: center;
   align-items: center;
-  padding: 1em;
   margin: .3em;
-}
-
-.head{
-  padding: .3em;;
 }
 
 #gameScreen{
@@ -53,6 +48,16 @@ header{
 
 h2 {
   font-size: 35px;
+}
+
+h1 {
+  margin-top: 0.5em;
+  margin-bottom: 0.25em;
+}
+
+.head {
+  margin-top: 0.25em;
+  margin-bottom: 0.5em;
 }
 
 p {
